fix: fix broken lint workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,9 +1,14 @@
 name: Lint
 
 on:
-  [push, pull_request]:
+  push:
     paths:
       - '*.py'
+  pull_request:
+    paths:
+      - '*.py'
+
+
 
 jobs:
   flake8_lint:
