--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ disnake-jishaku = "^2.6.5"
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
 flake8 = "^4.0.1"
+isort = "^5.10.1"
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
