--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "ezar"
-version = "3.1.0"
+version = "3.0.0"
 description = "A very helpful Moderation and Server Help bot, that has Economy for no damn reason."
-authors = ["Noelle <noelle_km@proton.me>"]
-license = "MIT"
+authors = ["Sham <thesham@proton.me>"]
+license = "BSD 3.0"
 
 [tool.poetry.dependencies]
 python = "^3.8"
