build(deps): add disnake-ext-components

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ motor = "^3.0.0"
 dnspython = "^2.2.1"
 disnake = {git = "https://github.com/DisnakeDev/disnake"}
 disnake-jishaku = "^2.6.5"
+disnake-ext-components = {git = "https://github.com/DisnakeCommunity/disnake-ext-components"}
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
