--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,13 @@ disnake-ext-components = {git = "https://github.com/DisnakeCommunity/disnake-ext
 black = "^22.3.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
+taskipy = "^1.10.2"
 
 [tool.isort]
 profile = "black"
+
+[tool.taskipy.tasks]
+start = "poetry run python -m ezar"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
