make black preferred format with isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,10 @@ max-line-length = 120
 exclude = .tox,.git,docs,venv,.venv
 
 [isort]
+profile = black
 line_length = 88
 multi_line_output = 3
-default_section = THIRDPARTY
 skip = venv/
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
 
 [metadata]
 license_file = LICENSE
