--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,10 +2,12 @@ name: CI
 
 on:
     pull_request:
-        branches: ["master", "main"]
+        branches:
+            - main
 
     push:
-        branches: ["master", "main"]
+        branches:
+            - main
 
 jobs:
     linter:
